--- a/style.css
+++ b/style.css
@@ -52,7 +52,109 @@ main{
 }
 
 #letters{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: var(--div-margin);
+}
+
+.alphabet{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border: 2px solid var(--dark-green);
+    font-size: 30px;
+    font-weight: 700;
+    background-color: var(--green);
+}
+
+.alphabet:hover{
+    background-color: var(--light);
+}
+
+.alphabet:last-child{
+    margin-right: 0;
+}
+
+#category{
+    width: 100%;
     display: grid;
     place-items: center;
     margin-bottom: var(--div-margin);
+}
+
+#current-category{
+    font-size: 28px;
+}
+
+#answear{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.answear-span{
+    width: 40px;
+    height: 40px;
+    display: grid;
+    place-items: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-right: 10px;
+    border-bottom: 4px solid #000;
+}
+
+.answear-span:last-child{
+    margin-right: 0;
+}
+
+#game-stage{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;   
+    color: var(--dark-green) 
+}
+
+#new-game{
+    width: 100%;
+    margin-top: var(--div-margin);
+    display: grid;
+    place-content: center;
+    grid-template-columns: repeat(2,164px);
+    grid-column-gap: 20px;
+}
+
+#new-game-button{
+    width: 160px;
+    height: 50px;
+    border: 2px solid var(--dark-green);
+    border-radius: 10px;
+    font-size: 26px;
+    background-color: var(--light-green);
+    color: #fff;
+    font-weight: 700;
+}
+
+#new-game-button:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+#hint-button{
+    width: 160px;
+    height: 50px;
+    border: 2px solid var(--dark-green);
+    border-radius: 10px;
+    font-size: 26px;
+    background-color: var(--light-green);
+    color: #fff;
+    font-weight: 700;
+}
+
+#hint-button:hover{
+    background-color: #fff;
+    color: #000;
 }
