--- a/style.css
+++ b/style.css
@@ -52,16 +52,16 @@ main{
 }
 
 #letters{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 54px);
+    place-content: center;
     margin-bottom: var(--div-margin);
 }
 
 .alphabet{
     width: 50px;
     height: 50px;
-    margin-right: 10px;
     border: 2px solid var(--dark-green);
     font-size: 30px;
     font-weight: 700;
@@ -70,10 +70,6 @@ main{
 
 .alphabet:hover{
     background-color: var(--light);
-}
-
-.alphabet:last-child{
-    margin-right: 0;
 }
 
 #category{
@@ -102,6 +98,16 @@ main{
     font-weight: 700;
     margin-right: 10px;
     border-bottom: 4px solid #000;
+}
+
+.answear-span-spacebar{
+    width: 40px;
+    height: 40px;
+    display: grid;
+    place-items: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-right: 10px;
 }
 
 .answear-span:last-child{
@@ -157,4 +163,13 @@ main{
 #hint-button:hover{
     background-color: #fff;
     color: #000;
+}
+
+.clicked-button{
+    width: 50px;
+    height: 50px;
+    border: 2px solid #d3d3d3;
+    font-size: 30px;
+    font-weight: 700;
+    background-color: #d3d3d3;
 }
